added new paths to api
