# applications/services/api/user.go
@@ -24,13 +24,14 @@ type User struct {
 
 // Get User
 // @Schemes
-// @Description Gets a user by id
-// @Tags User
-// @Accept json
-// @Produce json
-// @Success 200 {object} User
-// @Failure 404
-// @Router /api/get_user/:id [get]
+// @Description  Gets a user by id
+// @Tags         User
+// @Accept       json
+// @Param        id  path  int  true  "Id of user"
+// @Produce      json
+// @Success      200  {object}  User
+// @Failure      404
+// @Router       /api/get_user/{id} [get]
 func GetUser(c *gin.Context) {
 	userId := c.Param("id")
 	id, err := strconv.ParseInt(userId, 10, 64)
@@ -54,13 +55,13 @@ func GetUser(c *gin.Context) {
 
 // Get All Users
 // @Schemes
-// @Description Gets a list of all users
-// @Tags User
-// @Accept json
-// @Produce json
-// @Success 200 {object} []User
-// @Failure 404
-// @Router /api/get_users/ [get]
+// @Description  Gets a list of all users
+// @Tags         User
+// @Accept       json
+// @Produce      json
+// @Success      200  {object}  []User
+// @Failure      404
+// @Router       /api/get_users/ [get]
 func GetAllUsers(c *gin.Context) {
 	conn, err := grpc.Dial(configuration.Postgres.Service, grpc.WithInsecure())
 	eh.PanicOnError(err, "failed to connect to grpc")
@@ -85,12 +86,13 @@ func GetAllUsers(c *gin.Context) {
 
 // Create User
 // @Schemes
-// @Description Creates a user
-// @Tags User
-// @Accept json
-// @Produce json
-// @Success 200
-// @Router /api/create_user/ [post]
+// @Description  Creates a user
+// @Tags         User
+// @Accept       json
+// @Param        User  body  User  true  "User to create"
+// @Produce      json
+// @Success      200
+// @Router       /api/create_user/ [post]
 func CreateUser(c *gin.Context) {
 	conn, err := grpc.Dial(configuration.Postgres.Service, grpc.WithInsecure())
 	eh.PanicOnError(err, "failed to connect to grpc")
